--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   shared_preferences: ^2.2.2
   connectivity_plus: ^5.0.2
   outline_gradient_button: ^2.0.1+1
+  flutter_circular_text: ^0.3.1
+  flutter_arc_text: ^0.6.0
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
